# salvo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: cluv_integration.py  xgenius_integration.py
src/salvo/: __init__.py  cli.py  decorators.py  doctor.py  errors.py  history.py  policy.py
src/salvo/dispatch/: __init__.py  account.py  caps.py  partition.py
src/salvo/job/: __init__.py  handle.py  history.py  oom.py  preempt.py  render.py  spec.py  submit.py
src/salvo/manifest/: __init__.py  schema.py  store.py
src/salvo/obs/: __init__.py  events.py
src/salvo/runtime/: __init__.py  entrypoint.py  epilog.py
src/salvo/stage/: __init__.py  gate.py
src/salvo/topology/: __init__.py  detect.py  loader.py  schema.py
src/salvo/topology/presets/: _national.yaml  beluga.yaml  cedar.yaml  mila.yaml  narval.yaml  rorqual.yaml
tests/: conftest.py  test_version.py
tests/fixtures/clusters/: child.yaml  parent.yaml
tests/integration/: conftest.py  test_library_surface.py  test_oom_chain.py  test_submit_e2e.py
tests/integration/golden/: mila_cpu_basic.sh  rorqual_gpu_basic.sh
tests/perf/: test_perf_budgets.py
tests/unit/: _runtime_helpers.py  test_account.py  test_caps.py  test_cli.py  test_decorator.py  test_doctor.py  test_errors.py  test_errors_subprocess_wrap.py  test_events.py  test_gate.py  test_handle.py  test_handle_imports.py  test_history.py  test_manifest.py  test_oom_dsl.py  test_oom_retry.py  test_partition.py  test_preempt.py  test_presets.py  test_public_api.py  test_render.py  test_runtime_entrypoint.py  test_runtime_epilog.py  test_spec.py  test_submit.py  test_submit_hops.py  test_topology_detect.py  test_topology_loader.py  test_topology_schema.py
