[project]
name = "pysalvo"
version = "0.0.0"
description = "Multi-cluster SLURM job runner for Mila/DRAC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "W" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml",
]
mila = []
drac = []
all = ["pysalvo[mila,drac]"]

[project.scripts]
salvo = "salvo.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salvo"]

[tool.hatch.build.targets.wheel.force-include]
"src/salvo/topology/presets" = "salvo/topology/presets"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/salvo"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=salvo --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
