[project]
name = "pysalvo"
version = "0.2.1"
description = "Render + policy library for SLURM JobSpecs (Mila + DRAC clusters)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "W" }]
keywords = ["slurm", "hpc", "sbatch", "mila", "drac", "alliance-canada"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/wietzesuijker/salvo"
Source = "https://github.com/wietzesuijker/salvo"
Issues = "https://github.com/wietzesuijker/salvo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml",
]
mila = []
drac = []
all = ["pysalvo[mila,drac]"]

[project.scripts]
salvo = "salvo.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salvo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/salvo"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=salvo --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
